# countdracula

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
modules/: greetings_module.cpp  greetings_module.hpp
modules/chess/: chess_module.cpp  chess_module.hpp
